--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="header">
             <h1>Building Regulations Compliance Tracker</h1>
-            <p>Track design decisions against Approved Documents A-P</p>
+            <p>Track design decisions against Approved Documents A-T</p>
         </div>
 
         <div class="project-info">
